--- a/src/pages/ajouter/ajouter.html
+++ b/src/pages/ajouter/ajouter.html
@@ -5,32 +5,40 @@
 </ion-header>
 
 <ion-content padding>
-  
-  <form class="example-form" action="Database.add()">
 
+  <form (ngSubmit)="condemn(creation.firstName, creation.lastName, creation.age)">
 
-    <ion-input matInput color="primary" type="text" placeHolder="First name" floating value="[person.firstName]"></ion-input>
-    <p>Enter a valid name, no numbers.</p>
+    <ion-item>
+      <ion-label>First name:</ion-label>
+      <ion-input matInput color="primary" type="text" placeHolder="First name" floating [(ngModel)]="" name="firstName"></ion-input>
+      <p>Enter a valid name, no numbers.</p>
 
-    <p color="red" *ngIf="true">
-      First name is <strong>required</strong>
-    </p>
+      <p color="red" *ngIf="true">
+        First name is <strong>required</strong>
+      </p>
+    </ion-item>
+    <ion-item>
+      <ion-label>Last name:</ion-label>
+      <ion-input matInput color="primary" type="text" placeHolder="Last name" floating [(ngModel)]="" name="lastName"></ion-input>
+      <p>Enter a valid name, no numbers.</p>
 
-    <ion-input matInput color="primary" type="text" placeHolder="Last name" floating value="[person.lastName]"></ion-input>
-    <p>Enter a valid name, no numbers.</p>
-
-    <p color="red" *ngIf="true">
-      Last name is <strong>required</strong>
-    </p>
-
-    <ion-input matInput name="age" color="primary" type="number" placeHolder="age" floating [(ngModel)]="age">0</ion-input>
-    <p>Enter a valid age.</p>
-    <p color="red" *ngIf="age.$dirty && validNumber(person.age)">
-      I don't believe you... Please enter that person's real age.
-    </p>
-    <p color="red" *ngIf="true">
-      Age is <strong>required</strong>
-    </p>
+      <p color="red" *ngIf="true">
+        Last name is <strong>required</strong>
+      </p>
+    </ion-item>
+    <ion-item>
+      <ion-label>Age:</ion-label>
+      <ion-input matInput name="age" color="primary" type="number" placeHolder="age" floating [(ngModel)]="0"></ion-input>
+      <p>Enter a valid age.</p>
+      <p color="red" *ngIf="person.age.$dirty && validNumber(person.age)">
+        I don't believe you... Please enter that person's real age.
+      </p>
+      <p color="red" *ngIf="true">
+        Age is <strong>required</strong>
+      </p>
+    </ion-item>
+    
+    <button ion-button type="submit" block>Add to the list! >:D</button>
     <!--
         <input mat-button  color="primary" style="color:mediumorchid" value="Add him! >:D" type:"submit" />
         <mat-form-field class="example-full-width">
