--- a/src/pages/ajouter/ajouter.html
+++ b/src/pages/ajouter/ajouter.html
@@ -10,7 +10,7 @@
 
     <ion-item>
       <ion-label>First name:</ion-label>
-      <ion-input matInput color="primary" type="text" placeHolder="First name" floating [(ngModel)]="" name="firstName"></ion-input>
+      <ion-input matInput color="primary" type="text"  floating [(ngModel)]="" name="firstName"></ion-input>
       <p>Enter a valid name, no numbers.</p>
 
       <p color="red" *ngIf="true">
@@ -19,7 +19,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Last name:</ion-label>
-      <ion-input matInput color="primary" type="text" placeHolder="Last name" floating [(ngModel)]="" name="lastName"></ion-input>
+      <ion-input matInput color="primary" type="text"  floating [(ngModel)]="" name="lastName"></ion-input>
       <p>Enter a valid name, no numbers.</p>
 
       <p color="red" *ngIf="true">
@@ -28,7 +28,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Age:</ion-label>
-      <ion-input matInput name="age" color="primary" type="number" placeHolder="age" floating [(ngModel)]="0"></ion-input>
+      <ion-input matInput name="age" color="primary" type="number" floating [(ngModel)]="0"></ion-input>
       <p>Enter a valid age.</p>
       <p color="red" *ngIf="person.age.$dirty && validNumber(person.age)">
         I don't believe you... Please enter that person's real age.
