--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-toolbar *ngIf="empty">modify</ion-toolbar>
+  <ion-toolbar *ngIf="Database.isEmpty()"><button ion-button full (click)="changeModify()"></button></ion-toolbar>
   <span *ngIf="Database.isEmpty()">
     <mat-card>
       <mat-card-title>
@@ -19,13 +19,13 @@
       <ion-col col-5>Prénom</ion-col>
       <ion-col col-2>Âge</ion-col>
     </ion-row>
-    <ion-row *ngFor="let person of Database">
-      <ion-col col-5 *ngIf="modify"><input type="text" name="FirstName" value="[(person.lastName)]"></ion-col>
-      <ion-col col-5 *ngIf="!modify">{{person.lastName}}</ion-col>
-      <ion-col col-5 *ngIf="modify"><input type="text" name="FirstName" value="[(person.firstName)]"></ion-col>
-      <ion-col col-5 *ngIf="!modify">{{person.firstName}}</ion-col>
-      <ion-col col-2 *ngIf="modify"><input type="text" name="FirstName" value="[(person.age)]"></ion-col>
-      <ion-col col-2 *ngIf="!modify">{{person.age}}</ion-col>
+    <ion-row *ngFor="let item of persons">
+      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.lastName)]"></ion-col>
+      <ion-col col-5 *ngIf="!modify()">{{person.lastName}}</ion-col>
+      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.firstName)]"></ion-col>
+      <ion-col col-5 *ngIf="!modify()">{{person.firstName}}</ion-col>
+      <ion-col col-2 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.age)]"></ion-col>
+      <ion-col col-2 *ngIf="!modify()">{{person.age}}</ion-col>
     </ion-row>
     <ion-fab full right bottom>
       <button ion-fab full (click)="ajouter()"><ion-icon name="add-circle-outline"></ion-icon></button>
