--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,18 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>La petite liste noir de Rached</ion-title>
+    <ion-title>La petite liste noire de Rached</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-toolbar *ngIf="isEmpty()"><button ion-button full (click)="changeModify()"></button></ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar [(ngModel)]="search" [showCancelButton]="shouldShowCancel" (ionInput)="setSearch(search)" (ionCancel)="setSearch('')">
+    </ion-searchbar>
+  </ion-toolbar>
+  <button ion-button icon-start secondary (click)="changeModify()"><ion-icon name="brush"></ion-icon>Modifier</button>
+
+
+  {{getSearch()}}{{modify()}}
   <span *ngIf="isEmpty()">
     <mat-card>
       <mat-card-title>
@@ -13,25 +20,29 @@
       </mat-card-title>
     </mat-card>
   </span>
+
   <span *ngIf="!isEmpty()">
     <ion-row>
       <ion-col col-5>Nom</ion-col>
       <ion-col col-5>Prénom</ion-col>
       <ion-col col-2>Âge</ion-col>
     </ion-row>
+
+
     <ion-row *ngFor="let item of persons">
-      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.lastName)]"></ion-col>
+      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" [(ngModel)]="person.firstName"></ion-col>
+         <ion-col col-5 *ngIf="!modify()"><button ion-button color="danger" (click)="remove(person.id)"><ion-icon ios="ios-backspace" md="md-backspace"></ion-icon></button>
+             {{person.firstName}}</ion-col>
+      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" [(ngModel)]="person.lastName"></ion-col>
       <ion-col col-5 *ngIf="!modify()">{{person.lastName}}</ion-col>
-      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.firstName)]"></ion-col>
-      <ion-col col-5 *ngIf="!modify()">{{person.firstName}}</ion-col>
-      <ion-col col-2 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.age)]"></ion-col>
-      <ion-col col-2 *ngIf="!modify()">{{person.age}}</ion-col>
     </ion-row>
-    <ion-fab full right bottom>
-      <button ion-fab full (click)="ajouter()"><ion-icon name="add-circle-outline"></ion-icon></button>
-    </ion-fab>
   </span>
-  
+  <!--   <ion-col col-2 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.age)]"></ion-col>
+        <ion-col col-2 *ngIf="!modify()">{{person.age}}</ion-col>
+  -->
+
+ 
+
   <ion-fab right bottom>
     <button ion-fab style="float: right;" (click)="goAddElement()"><img style="position:center;" src="../../assets/imgs/add.png" /></button>
   </ion-fab>
