--- a/src/pages/ajouter/ajouter.html
+++ b/src/pages/ajouter/ajouter.html
@@ -9,46 +9,43 @@
   <form (ngSubmit)="condemn(creation.firstName, creation.lastName, creation.age)">
 
     <ion-item>
-      <ion-label>First name:</ion-label>
+      <ion-label>Prénom:</ion-label>
       <ion-input matInput type="text" color="primary" floating [(ngModel)]="firstName" (ngModelChange)="changeFirstName(firstName)" [ngModelOptions]="{standalone: true}"></ion-input>
     </ion-item>
 
     {{getf()}}
     <p color="red" *ngIf="isEmpty(getf())">
-      First name is <strong>required</strong>
+      Le prénom est <strong>nécéssaire</strong>!
     </p>
     <p color="red" *ngIf="isRobot(getf())">
-      Unless it is a robot, I doubt that the person's name contains a letter.
+      À part si c'est un robot, je ne crois pas que son nom contient un nombre.
     </p>
-    <!--
-      <ion-item>
-        <ion-label>First name:</ion-label>
-        <ion-input matInput type="text" color="primary" floating [(ngModel)]="firstName" (ngModelChange)="changeFirstName(firstName)" [ngModelOptions]="{standalone: true}"></ion-input>
-
-      </ion-item>
-
+    <br />
 
     <ion-item>
-      <ion-label>Last name:</ion-label>
-      <ion-input matInput color="primary" type="text"  floating [(ngModel)]="" name="lastName"></ion-input>
-      <p>Enter a valid name, no numbers.</p>
-      <p color="red" *ngIf="true">
-        Last name is <strong>required</strong>
-      </p>
-    </ion-item>
+      <ion-label>Nom de famille:</ion-label>
+      <ion-input matInput type="text" color="primary" floating [(ngModel)]="lastName" (ngModelChange)="changeLastName(lastName)" [ngModelOptions]="{standalone: true}"></ion-input>
 
+    </ion-item>
+    {{getl()}}
+    <p color="red" *ngIf="isEmpty(getl())">
+      Le nom de famille est <strong>nécéssaire</strong>!
+    </p>
+    <p color="red" *ngIf="isRobot(getl())">
+      À part si c'est un robot, je ne crois pas que son nom contient un nombre.
+    </p>
+    <br />
     <ion-item>
       <ion-label>Age:</ion-label>
-      <ion-input matInput name="age" color="primary" type="number" floating [(ngModel)]="0"></ion-input>
-      <p>Enter a valid age.</p>
-      <p color="red" *ngIf="person.age.$dirty && validNumber(person.age)">
-        I don't believe you... Please enter that person's real age.
-      </p>
-      <p color="red" *ngIf="true">
-        Age is <strong>required</strong>
-      </p>
+      <ion-input matInput type="number" color="primary" floating [(ngModel)]="age" (ngModelChange)="changeAge(age)" [ngModelOptions]="{standalone: true}"></ion-input>
+
     </ion-item>
-    -->
+    {{geta()}}
+    <p color="red" *ngIf="incorrectAge(geta())">
+      Prenez mes questions au sérieux svp...
+    </p>
+
+  
     <button ion-button type="submit" block>Add to the list! >:D</button>
     <!--
   <input mat-button  color="primary" style="color:mediumorchid" value="Add him! >:D" type:"submit" />
