--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 
 
   {{getSearch()}}{{modify()}}
-  <br /><br/>
+  <br /><br />
   <span *ngIf="isEmpty()">
     <mat-card>
       <mat-card-title>
@@ -24,23 +24,26 @@
 
   <span *ngIf="!isEmpty()">
     <ion-row>
-      <ion-col col-5>Nom</ion-col>
-      <ion-col col-5>Prénom</ion-col>
-      <ion-col col-2>Âge</ion-col>
+      <ion-col mat-header-cell col-5>Prénom</ion-col>
+      <ion-col mat-header-cell col-5>Nom</ion-col>
+      <ion-col mat-header-cell col-2>Age</ion-col>
     </ion-row>
 
 
-    <ion-row *ngFor="let item of persons">
-      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" [(ngModel)]="person.firstName"></ion-col>
-         <ion-col col-5 *ngIf="!modify()"><button ion-button color="danger" (click)="remove(person.id)"><ion-icon ios="ios-backspace" md="md-backspace"></ion-icon></button>
-             {{person.firstName}}</ion-col>-->
-      <ion-col col-5 *ngIf="modify()"><input type="text" name="FirstName" [(ngModel)]="person.lastName"></ion-col>
-      <ion-col col-5 *ngIf="!modify()">{{person.lastName}}</ion-col>
+    <ion-row *ngFor="let item of targets">
+      <ion-col mat-cell col-5 *ngIf="modify()">
+        <button ion-button color="danger" (click)="remove(item.id)"><ion-icon ios="ios-backspace" md="md-backspace"></ion-icon></button><input mat-input type="text" name="firstName" [(ngModel)]="item.firstName">
+      </ion-col>
+      <ion-col mat-cell col-5 *ngIf="!modify()"> {{item.firstName}} </ion-col>
+      <ion-col mat-cell col-5 *ngIf="modify()"><input mat-input type="text" name="lastName" [(ngModel)]="item.lastName"></ion-col>
+      <ion-col mat-cell col-5 *ngIf="!modify()">{{item.lastName}}
+      </ion-col>
+
+      <ion-col mat-cell col-2 *ngIf="modify()"><input mat-input type="text" name="age" [(ngModel)]="item.age"></ion-col>
+      <ion-col mat-cell col-2 *ngIf="!modify()">{{item.age}}</ion-col>
     </ion-row>
   </span>
-  <!--   <ion-col col-2 *ngIf="modify()"><input type="text" name="FirstName" value="[(person.age)]"></ion-col>
-        <ion-col col-2 *ngIf="!modify()">{{person.age}}</ion-col>
-  -->
+ 
 
   <ion-fab right bottom color="dark">
     <button ion-fab color="dark" style="float: right;" (click)="goAddElement()"><img style="position:center;" src="../../assets/imgs/add.png" /></button>
